enhanced contact and resume section